Se creó con Colab

--- a/Taller_1_vino.ipynb
+++ b/Taller_1_vino.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Grupos5-EDA-icesi/Analisis-Exploratorio/blob/rama_leo/Taller_1_vino.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -10,7 +20,7 @@
       "source": [
         "# based on https://towardsdatascience.com/exploratory-data-analysis-in-python-a-step-by-step-process-d0dfa6bf94ee\n",
         "\n",
-        "\n",
+        "#esta es una prueba\n",
         "# Importamos las librerías\n",
         "\n",
         "import pandas as pd\n",
@@ -1282,7 +1292,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "base",
