cambio en el origen da la data

--- a/Analisis_Univariado.ipynb
+++ b/Analisis_Univariado.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,8 @@
     "import pandas as pd\n",
     "\n",
     "# Cargar el archivo Excel\n",
-    "df = pd.read_excel(\"./Data/Ventas_portal3.xlsx\")\n",
+    "#df = pd.read_excel(\"./Data/Ventas_portal3.xlsx\")\n",
+    "df = pd.read_excel('https://github.com/Grupos5-EDA-icesi/Analisis-Exploratorio/raw/main/Data/Ventas_portal3.xlsx')\n",
     "\n",
     "# Mostrar las dimensiones del DataFrame (filas, columnas)\n",
     "print(df.shape)\n",
