cambios en el texto

--- a/Analisis_Univariado.ipynb
+++ b/Analisis_Univariado.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Grupo 5**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -651,9 +658,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Justificacion:\n",
+    "### Justificacion:\n",
     "\n",
-    "✅ El precio del plan (price_plan) es una variable fundamental para el análisis de las solicitudes de servicios de Internet, ya que influye directamente en la decisión de compra del cliente, la accesibilidad del servicio y la segmentación del mercado. A través de un análisis univariado, se busca:\n",
+    "El precio del plan (price_plan) es una variable fundamental para el análisis de las solicitudes de servicios de Internet, ya que influye directamente en la decisión de compra del cliente, la accesibilidad del servicio y la segmentación del mercado. A través de un análisis univariado, se busca:\n",
     "\n",
     "- Entender la distribución de precios: Identificar cómo se distribuyen los valores de los planes contratados, observando si hay precios más comunes o extremos que puedan influir en la demanda.\n",
     "\n",
@@ -670,7 +677,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Descripcion:\n",
+    "### Descripcion:\n",
     "\n",
     "La organización necesita predecir qué tipo de planes de internet y en qué rango de precios serán más contratados en los próximos 3 meses, considerando el impacto del estrato socioeconómico en la decisión de compra.\n",
     "\n",
@@ -681,7 +688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> PREGUNTA SMART\n",
+    "### PREGUNTA SMART\n",
     "\n",
     "**¿Qué tipo de planes de internet y en qué rango de precios tienen mayor probabilidad de ser contratados en los próximos 3 meses, segmentados por estrato socioeconómico, con base en el histórico de ventas, rechazos y características de clientes en Cali?**\n",
     "\n",
