--- a/Analisis_Univariado.ipynb
+++ b/Analisis_Univariado.ipynb
@@ -4,7 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Grupo 5**"
+    "# **Grupo 5**\n",
+    "\n",
+    "### Juan Carlos, Julián, Leonardo y Camila"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Descripcion:\n",
+    "\n",
+    "La organización necesita predecir qué tipo de planes de internet y en qué rango de precios serán más contratados en los próximos 3 meses, considerando el impacto del estrato socioeconómico en la decisión de compra.\n",
+    "\n",
+    "Actualmente, no existe un modelo predictivo que permita anticipar la demanda según el precio y el estrato, lo que podría generar una oferta desalineada con las necesidades del mercado, afectando la rentabilidad, planificación comercial y fidelización de clientes."
    ]
   },
   {
@@ -54,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +664,7 @@
     }
    ],
    "source": [
-    "df.describe(include = \"all\")"
+    "df.describe(include = \"all\")    # Estadísticas de las columnas"
    ]
   },
   {
@@ -671,17 +684,6 @@
     "- Relacionar con el comportamiento del cliente: Analizar si ciertos rangos de precios están más asociados con órdenes creadas o rechazadas, lo que permitiría ajustar estrategias de oferta y promoción.\n",
     "\n",
     "- Optimización de estrategias comerciales: Conocer la estructura de precios facilitará la toma de decisiones en cuanto a estrategias de marketing y fidelización, asegurando que los planes se alineen con la capacidad de pago de los clientes en distintos estratos."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Descripcion:\n",
-    "\n",
-    "La organización necesita predecir qué tipo de planes de internet y en qué rango de precios serán más contratados en los próximos 3 meses, considerando el impacto del estrato socioeconómico en la decisión de compra.\n",
-    "\n",
-    "Actualmente, no existe un modelo predictivo que permita anticipar la demanda según el precio y el estrato, lo que podría generar una oferta desalineada con las necesidades del mercado, afectando la rentabilidad, planificación comercial y fidelización de clientes."
    ]
   },
   {
@@ -750,6 +752,13 @@
    ],
    "source": [
     "df.price_plan.value_counts()   #Cantidad de valores por categoria"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La mayoría de los planes están entre 62,000 y 70,500 COP."
    ]
   },
   {
