Apellido De Leo

--- a/Analisis_Univariado.ipynb
+++ b/Analisis_Univariado.ipynb
@@ -6,8 +6,13 @@
    "source": [
     "# **Grupo 5**\n",
     "\n",
-    "### Juan Carlos Zuñiga M, Julián, Leonardo y Camila"
+    "### Juan Carlos Zuñiga M, Julián, Leonardo Agudelo y Camila"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
