--- a/Analisis_Univariado.ipynb
+++ b/Analisis_Univariado.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# **Grupo 5**\n",
     "\n",
-    "### Juan Carlos Zuñiga M, Julián, Leonardo Agudelo y Camila"
+    "### Juan Carlos Zuñiga M, Julián Morales, Leonardo Agudelo y Maria Camila Diaz"
    ]
   },
   {
