coloque apellido a julian

--- a/Analisis_Univariado.ipynb
+++ b/Analisis_Univariado.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# **Grupo 5**\n",
     "\n",
-    "### Juan Carlos Zuñiga M, Julián Morales, Leonardo Agudelo y Maria Camila Diaz"
+    "### Juan Carlos Zuñiga M, Julián Morales Solarte, Leonardo Agudelo y Maria Camila Diaz"
    ]
   },
   {
@@ -682,7 +682,7 @@
     "\n",
     "- Entender la distribución de precios: Identificar cómo se distribuyen los valores de los planes contratados, observando si hay precios más comunes o extremos que puedan influir en la demanda.\n",
     "\n",
-    "- Calcular medidas estadísticas clave: Obtener métricas como media, mediana, moda, desviación estándar, valores mínimos y máximos, lo que permitirá entender la variabilidad de los precios ofrecidos.\n",
+    "- Calcular medidas estadísticas clave: Obtener métricas como media, mediana, moda, desviación estándar, valores mínimos y máximos, lo que permitirá entender la variabilidad de los precios ofrecidos.zxczxcxzcx\n",
     "\n",
     "- Identificar patrones y outliers: Determinar si existen valores atípicos (precios significativamente más altos o bajos que el promedio), lo que podría indicar la presencia de planes especiales o diferenciados.\n",
     "\n",
