--- a/Analisis_Univariado.ipynb
+++ b/Analisis_Univariado.ipynb
@@ -8,8 +8,7 @@
       "source": [
         "# **Grupo 5**\n",
         "\n",
-        "### Juan Carlos Zuñiga M, Julián Morales, Leonardo Agudelo y Maria Camila Diaz\n",
-        "### ESTO ES UNA PRUEBA"
+        "### Juan Carlos Zuñiga M, Julián Morales, Leonardo Agudelo y Maria Camila Diaz"
       ]
     },
     {
@@ -1223,6 +1222,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "django_2_0",
       "language": "python",
@@ -1239,9 +1241,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.12"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
