cambios en la ruta de los datasets

--- a/FINAL/caso_ventas4.ipynb
+++ b/FINAL/caso_ventas4.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +35,9 @@
     "import pandas as pd\n",
     "\n",
     "# Cargar el archivo Excel\n",
-    "df = pd.read_excel(\"./Data/Ventas_portal_data_bruta.xlsx\")\n",
-    "#df = pd.read_excel('https://github.com/Grupos5-EDA-icesi/Analisis-Exploratorio/raw/main/Data/Ventas_portal3.xlsx')\n",
+    "\n",
+    "#df = pd.read_excel(\"./Data/Ventas_portal_data_bruta.xlsx\")\n",
+    "df = pd.read_excel('https://github.com/Grupos5-EDA-icesi/Analisis-Exploratorio/raw/main/FINAL/Data/Ventas_portal_data_bruta.xlsx')\n",
     "\n",
     "# Mostrar las dimensiones del DataFrame (filas, columnas)\n",
     "print(df.shape)\n",
@@ -1307,18 +1308,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Volvemos a cargar el dataset con los datos originales\n",
     "\n",
-    "df2 = pd.read_excel(\"./Data/Ventas_portal_data_bruta.xlsx\")"
+    "#df2 = pd.read_excel(\"./Data/Ventas_portal_data_bruta.xlsx\")\n",
+    "df2 = pd.read_excel('https://github.com/Grupos5-EDA-icesi/Analisis-Exploratorio/raw/main/FINAL/Data/Ventas_portal_data_bruta.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -25203,7 +25205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25236,7 +25238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -25249,7 +25251,9 @@
    ],
    "source": [
     "# Cargar el archivo Excel\n",
-    "df = pd.read_csv(\"./Data/data_sin_nulos.csv\")\n",
+    "\n",
+    "#df = pd.read_csv(\"./Data/data_sin_nulos.csv\")\n",
+    "df = pd.read_csv('https://github.com/Grupos5-EDA-icesi/Analisis-Exploratorio/raw/main/FINAL/Data/data_sin_nulos.csv')\n",
     "\n",
     "# Mostrar las dimensiones del DataFrame (filas, columnas)\n",
     "print(df.shape)\n",
@@ -26752,7 +26756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -26802,7 +26806,9 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./Data/data_transformada.csv\")\n",
+    "#df = pd.read_csv(\"./Data/data_transformada.csv\")\n",
+    "df = pd.read_csv('https://github.com/Grupos5-EDA-icesi/Analisis-Exploratorio/raw/main/FINAL/Data/data_transformada.csv')\n",
+    "\n",
     "df.info()"
    ]
   },
@@ -26822,7 +26828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -26844,7 +26850,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
