--- a/FINAL/Final_analisis_limpieza.ipynb
+++ b/FINAL/Final_analisis_limpieza.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,15 +107,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ! Falta hacer un diccionario de las variables"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +332,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2283,16 +2276,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Limpieza de los datos"
+    "***\n",
+    "***\n",
+    "***\n",
+    "# Limpieza de los datos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Volvemos a cargar el dataset con los datos originales\n",
+    "# volvemos a cargar el dataset con los datos originales\n",
     "\n",
     "df = pd.read_excel(\"./Data/Ventas_portal_data_bruta.xlsx\")\n",
     "#df = pd.read_excel('https://github.com/Grupos5-EDA-icesi/Analisis-Exploratorio/raw/main/FINAL/Data/Ventas_portal_data_bruta.xlsx')"
@@ -5796,6 +5792,19 @@
    "source": [
     "# Guardar el DataFrame en un archivo CSV\n",
     "df_balanced.to_csv(\"./Data/data_balanceada.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## conclusiónes:\n",
+    "\n",
+    "- El análisis y procesamiento del dataset permitió identificar las principales características demográficas, de producto y comportamiento temporal asociadas a las ventas en el portal. Se trabajó sobre un conjunto de datos con más de 22 mil registros, en el cual se detectaron variables clave como el tipo y precio del plan, edad, estrato socioeconómico y zona.\n",
+    "\n",
+    "- Durante la limpieza, se evidenció una considerable presencia de datos nulos en variables relacionadas con retiros y anulaciones, lo cual sugiere la necesidad de un mejor seguimiento o recolección en estos campos. Se logró categorizar y segmentar adecuadamente las variables para facilitar análisis posteriores, como modelamiento predictivo o segmentación de clientes.\n",
+    "\n",
+    "- El análisis inicial también permitió establecer que existen patrones temporales (mes, día de la semana) y que la mayoría de los usuarios se concentran en ciertas ciudades (ej. Cali), lo cual podría tener implicaciones en la estrategia comercial. Esta limpieza y estructuración del dataset sienta las bases para exploraciones más profundas, como modelos de retención, segmentación de clientes o análisis de causas de cancelación."
    ]
   }
  ],
