--- a/FINAL/Final_analisis_modelo.ipynb
+++ b/FINAL/Final_analisis_modelo.ipynb
@@ -557,6 +557,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- No hay correlaciones fuertes con la variable venta\n",
+    "\n",
+    "- La columna venta muestra correlaciones muy bajas con todas las demás variables.\n",
+    "\n",
+    "- El mayor valor es 0.10 con plan_MB, lo que sugiere que la cantidad de megas del plan tiene una leve influencia en la decisión de compra, pero es muy débil.Esto indica que la variable venta no depende fuertemente de ninguna variable numérica presente en este análisis.\n",
+    "\n",
+    "- price_plan y plan_MB tienen una correlación moderada (0.44), ya que los planes con más megas suelen tener un precio más alto. Esto sugiere que el precio y la capacidad del plan están relacionados, lo cual es esperable.\n",
+    "\n",
+    "- El estrato tiene una correlación positiva con price_plan (0.37) Puede significar que a mayor estrato socioeconómico, mayor es el precio del plan contratado. Esto indica que el nivel socioeconómico influye en la elección del plan.\n",
+    "\n",
+    "- No hay relaciones relevantes con Edad\n",
+    "\n",
+    "- La Edad tiene correlaciones muy bajas con todas las variables, indicando que no es un factor determinante en este análisis.\n",
+    "\n",
+    "- El mes (mes) tiene una correlación débil con plan_MB (0.39)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 118,
    "metadata": {},
@@ -1054,6 +1075,18 @@
     "\n",
     "# Perfil de los clusters (promedio de cada variable por cluster)\n",
     "df_cluster.groupby(\"cluster\").mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interpretación de los clusters:\n",
+    "\n",
+    "- Cluster 0: Clientes mayores (~53 años), estrato bajo, contratan planes de 266 MB a precios medios.\n",
+    "- Cluster 1: Clientes jóvenes (~29 años), estrato bajo, eligen planes similares en precio y velocidad (274 MB).\n",
+    "- Cluster 2: Clientes de estratos altos (4.19), con los planes más costosos (~$75,900) y de alta velocidad (274 MB).\n",
+    "- Cluster 3: Clientes de edad media (~41 años), pero con planes de menor velocidad (100 MB)."
    ]
   },
   {
@@ -1731,21 +1764,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_encoded' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Guardar el DataFrame en un archivo CSV\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mdf_encoded\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./Data/data_codificada.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_encoded' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Guardar el DataFrame en un archivo CSV\n",
     "df_encoded.to_csv(\"./Data/data_codificada.csv\", index=False)"
@@ -2153,6 +2174,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modelo Aplicado: Regresión Logística\n",
+    "\n",
+    "- ¿Por qué usar Regresión Logística?\n",
+    "La Regresión Logística es un modelo adecuado porque: Es ideal para problemas de clasificación binaria (venta = 1 o venta = 0).\n",
+    "\n",
+    "- Accuracy del modelo: 81.1%\n",
+    "- Weighted F1-Score: 79% \n",
+    "\n",
+    "> Matriz de Confusión\n",
+    "\n",
+    "- 1540 casos correctamente clasificados como \"Venta\" (Clase 1)\n",
+    "- 386 casos correctamente clasificados como \"No Venta\" (Clase 0)\n",
+    "- 448 falsos positivos (predijo \"Venta\" pero no ocurrió).\n",
+    "- 0 falsos negativos (ninguna venta real se clasificó erróneamente como \"No Venta\").\n",
+    "\n",
+    "> Consideraciones\n",
+    "\n",
+    "- El modelo logra una alta precisión en identificar clientes que sí compran (Recall = 1.00 en Clase 1).\n",
+    "- Problema con la Clase 0 (No Venta): La precisión es baja, indicando que el modelo predice muchas ventas que realmente no ocurren.\n",
+    "- Posible mejora: Se puede probar con otro modelo como Árboles de Decisión o Random Forest para mejorar la predicción de clientes que no compran."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 110,
    "metadata": {},
@@ -2191,6 +2238,16 @@
     "plt.hist(y_probs, bins=20)\n",
     "plt.title(\"Distribución de Probabilidades de Predicción\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Se observan dos grupos bien diferenciados: \n",
+    "- Un grupo con probabilidades cercanas a 0.0, lo que indica predicciones seguras de \"No Venta\".\n",
+    "- Otro grupo con probabilidades entre 0.6 y 0.9, indicando predicciones altas de \"Venta\".\n",
+    "\n"
    ]
   },
   {
@@ -2526,6 +2583,18 @@
     "df_pred['price_plan_predicted'] = rf_regressor.predict(df_pred)\n",
     "print(df_pred)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predicción del Precio del Plan en función del Estrato\n",
+    "\n",
+    "> Interpretación:\n",
+    "- Tendencia esperada: A medida que aumenta el estrato, el precio del plan también aumenta.\n",
+    "- Predicciones alineadas: El modelo predice valores dentro del rango de cada estrato.\n",
+    "- Variabilidad dentro de cada estrato: Algunos estratos tienen planes con precios más variados."
    ]
   }
  ],
